--- a/horizon/index.html
+++ b/horizon/index.html
@@ -13,17 +13,21 @@
 <div id="header">
         <Navbar></Navbar>
     </div>
-<div class="main" style="margin-top: 100px;">
+
+
+<div class="main">
 <hgroup>
 <br>
-<center><h1>阅读📖<br><tag>内测功能</tag></h1></center>
-<center><p>Turbo Horizon是Turbo Flint推出的阅读平台，在Turbo Horizon即可阅读享受独家内容。</p></center>
+<center>
+<img src="https://static.turboflint.cn/image/horizon-logo.jpg" style="width: 100px;"><br><br>
+<h1>里森阅读  <tag>测试阶段</tag></h1></center>
+<center><p>里森阅读是Turbo Flint推出的阅读平台，在里森阅读即可阅读享受独家内容。</p>
 </hgroup>
-<hr>
-<h1>如何使用？</h1>
-<p>该平台处于内测阶段，您可点击下方链接前往使用。<b>内测阶段的内容可能会有所修改。</b></p>
-当前版本：<img src="https://img.shields.io/github/v/release/ericlee517/horizon.svg" style="width: 80px;"><br><br>
+<center>
 <a href="https://horizon.turboflint.cn/" role="button">前往 Horizon →</a>
+</center>
+<hr>
+<p>测试阶段说明：里森阅读处于测试阶段，可能无法正常使用。若出现问题，请及时向我们反馈。</p>
 </div>
 <script src="../script/main.js"></script>
     <script src="https://cdn.staticfile.net/vue/3.2.36/vue.global.prod.js"></script>
