--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.staticfile.net/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
-    <title>我们回来了！ - Turbo Flint </title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <title>原创内容创作 - Turbo Flint</title>
 </head>
 
 <body>
@@ -19,16 +20,16 @@
         <article id="msg"><span aria-busy="true">加载中.......</span></article>
 
 
-        <center>
+        <center style="margin-top: 70px;margin-bottom: 70px;">
             <hgroup>
-                <h1 style="font-size: 60px;line-height: 100px;">以一种<br><b>全新姿态</b><br>闪耀回归</h1><br>
+                <h1 style="font-size: 60px;line-height: 100px;">坚持<b>原创</b><br>内容创作</h1><br>
                 <p style="font-size: 20px;">Turbo Flint V4 已于7月29日正式上线。以一种更方便、更快捷、更迅速的方式解决您的问题。</p>
         </center>
         </hgroup>
         <hr>
         <br>
-        <hgroup>
-            <h1>小说项目<small>Novel</small></h1><br>
+        <hgroup style="margin-top: 70px;margin-bottom: 70px;">
+            <h1><b class="green-title">小说</b>项目</h1><br>
             <article>
                 <hgroup>
                         <h1>BroKen</h1>
@@ -43,27 +44,34 @@
         <br>
         <hr>
         <br>
-<hgroup>
-            <h1>技术项目<small>Technology</small></h1><br>
-            <article>
+<hgroup style="margin-top: 70px;">
+            <h1><b class="orange-title">技术</b>项目</h1><br>
+            <article style="margin-bottom: 70px;">
                 <hgroup>
                         <h1>Castle 卡索</h1>
                         <p>提供公开数据源的平台。</p>
 </hgroup>
-                        <a href="https://castle.turboflint.cn" target="_blank" role="button" class="outline">前往卡索 <i class="bi bi-arrow-right"></i></a>
+                        <a href="#castle" target="_blank" role="button" class="outline" onclick="showError();">前往卡索 <i class="bi bi-arrow-right"></i></a>
                         <a href="#" target="_blank" role="button" class="outline">使用文档 <i class="bi bi-arrow-right"></i></a>
             </article>
 <br>
 <hr>
 <br>
-<hgroup>
-<h1>季节活动<small>Season activity</small></h1>
-<p>季节活动正在筹划，即将上线，尽情期待。</p>
-</hgroup>
+<div style="margin-top: 70px;margin-bottom: 70px;">
+<h1><b class="pink-title">活动</b>列表</h1>
+<br>
+<article>
+<h2>破碎世界观创作活动</h2>
+<p>BroKen 现已开放自由创作！现在参与创作，有机会在后续项目中出现你的创意！</p>
+<a role="button" class="outline" onclick="showClose();">立即参与 <i class="bi bi-arrow-right"></i></a>
+</article>
+</div>
+
+
         <br>
         <hr>
-        <hgroup>
-            <h1>自助服务<small>Self - Service</small></h1>
+        <hgroup style="margin-top: 70px;">
+            <h1>自助服务</h1>
             <p>快捷选择自助服务，不再需要繁琐的手续</p>
         </hgroup><br>
         <details>
@@ -72,11 +80,11 @@
             <a href="https://docs.turboflint.cn/">前往产品文档 <i class="bi bi-arrow-right"></i></a>
         </details>
 
-        <details>
+        <details style="margin-bottom: 70px;">
             <summary role="button" class="outline secondary">问题反馈</summary>
             <h1><i class="fa-solid fa-bug"></i></h1>
             <p>点击链接前往反馈社区，我们会尽快解决您的问题</p>
-            <a href="#">前往反馈社区 <i class="bi bi-arrow-right"></i></a>
+            <a onclick="showNolink();">前往反馈社区 <i class="bi bi-arrow-right"></i></a>
         </details>
 
         <br>
@@ -101,14 +109,15 @@
     </div>
     <hr>
     <footer style="padding: 0px;font-size: 15px;" class="footers">
-        <p>Copyright ©️ 2024 turboflint.cn | Copyright ©️ 2024 Eric Lee & Turbo Flint.<br><br>
-turboflint.cn 不使用任何Cookie，详情请阅读：<br><a href="policy/cookie_policy.html">网站 Cookie 使用政策</a>
+    <a href="policy/cookie_policy.html">网站 Cookie 使用政策</a>｜<a href="https://blog.turboflint.cn/">博客</a>｜<a href="https://docs.turboflint.cn/others/site-updates.html">更新日志</a>
+        <p>Copyright ©️ 2024 turboflint.cn | Copyright ©️ 2024 Eric Lee & Turbo Flint.
             
  </p>
     </footer>
     </div>
 
     <script src="https://cdn.staticfile.net/vue/3.2.36/vue.global.prod.js"></script>
+    <script type="text/javascript" src="https://fastly.jsdelivr.net/npm/toastify-js"></script>
     <script src="script/main_load.js"></script>
     <script src="script/main.js"></script>
 
