--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.staticfile.net/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.staticfile.net/toastify-js/1.12.0/toastify.min.css">
     <title>原创内容创作 - Turbo Flint</title>
 </head>
 
@@ -23,13 +23,12 @@
         <center style="margin-top: 70px;margin-bottom: 70px;">
             <hgroup>
                 <h1 style="font-size: 60px;line-height: 100px;">坚持<b>原创</b><br>内容创作</h1><br>
-                <p style="font-size: 20px;">Turbo Flint V4 已于7月29日正式上线。以一种更方便、更快捷、更迅速的方式解决您的问题。</p>
+                <p style="font-size: 20px;">一直坚持着原创的道路，以创新的形式创作更多有趣的的作品和项目。</p>
         </center>
         </hgroup>
         <hr>
-        <br>
-        <hgroup style="margin-top: 70px;margin-bottom: 70px;">
-            <h1><b class="green-title">小说</b>项目</h1><br>
+        <hgroup>
+            <h1><b class="green-title">小说项目</b></h1><br></hgroup>
             <article>
                 <hgroup>
                         <h1>BroKen</h1>
@@ -38,15 +37,23 @@
                         <a href="broken/broken.html" target="_blank" role="button" class="outline">阅读世界观<i class="bi bi-arrow-right"></i></a>
                         <a href="https://horizon.turboflint.cn/books/wandering-nothingness/" target="_blank" role="button" class="outline">阅读前瞻作 <i class="bi bi-arrow-right"></i></a>
             </article>
-
-
-        </hgroup>
-        <br>
+<br>
+<hr>
+<hgroup>
+            <h1><b class="purple-title">服务提供</b></h1><br>
+            <article>
+                <hgroup>
+                        <h1>火石凭证</h1>
+                        <p>一个凭证，互通火石全部项目和服务。</p>
+</hgroup>
+                        <a href="https://id.turboflint.cn/" target="_blank" role="button" class="outline">立即注册 <i class="bi bi-arrow-right"></i></a>
+            </article>
+    
         <hr>
         <br>
-<hgroup style="margin-top: 70px;">
-            <h1><b class="orange-title">技术</b>项目</h1><br>
-            <article style="margin-bottom: 70px;">
+<hgroup>
+            <h1><b class="orange-title">技术项目</b></h1><br>
+            <article>
                 <hgroup>
                         <h1>Castle 卡索</h1>
                         <p>提供公开数据源的平台。</p>
@@ -54,11 +61,10 @@
                         <a href="#castle" target="_blank" role="button" class="outline" onclick="showError();">前往卡索 <i class="bi bi-arrow-right"></i></a>
                         <a href="#" target="_blank" role="button" class="outline">使用文档 <i class="bi bi-arrow-right"></i></a>
             </article>
-<br>
 <hr>
 <br>
-<div style="margin-top: 70px;margin-bottom: 70px;">
-<h1><b class="pink-title">活动</b>列表</h1>
+<div>
+<h1><b class="pink-title">活动列表</b></h1>
 <br>
 <article>
 <h2>破碎世界观创作活动</h2>
@@ -67,32 +73,29 @@
 </article>
 </div>
 
-
-        <br>
         <hr>
-        <hgroup style="margin-top: 70px;">
+        <br>
+        <hgroup>
             <h1>自助服务</h1>
             <p>快捷选择自助服务，不再需要繁琐的手续</p>
         </hgroup><br>
         <details>
-            <summary role="button" class="outline secondary">产品文档</summary>
+            <summary>产品文档</summary>
             <p>Turbo Flint 建立了一个产品文档，以帮助用户快速入门产品</p>
             <a href="https://docs.turboflint.cn/">前往产品文档 <i class="bi bi-arrow-right"></i></a>
         </details>
-
-        <details style="margin-bottom: 70px;">
-            <summary role="button" class="outline secondary">问题反馈</summary>
+<hr>
+        <details>
+            <summary>问题反馈</summary>
             <h1><i class="fa-solid fa-bug"></i></h1>
             <p>点击链接前往反馈社区，我们会尽快解决您的问题</p>
             <a onclick="showNolink();">前往反馈社区 <i class="bi bi-arrow-right"></i></a>
         </details>
-
-        <br>
         <hr>
 
         <div class="contact">
             <br>
-            <h1>联系我们<small>Contact Us</small></h1>
+            <h1>联系我们</h1>
             <div class="contact_text">
                 <center>
                     <img class="qrcode" src="image/wechat.jpg">
@@ -117,7 +120,7 @@
     </div>
 
     <script src="https://cdn.staticfile.net/vue/3.2.36/vue.global.prod.js"></script>
-    <script type="text/javascript" src="https://fastly.jsdelivr.net/npm/toastify-js"></script>
+    <script type="text/javascript" src="https://cdn.staticfile.net/toastify-js/1.12.0/toastify.min.js"></script>
     <script src="script/main_load.js"></script>
     <script src="script/main.js"></script>
 
